set session by username for react project